# nexus_3

./: .gitignore  HANDOFF_NOTES.md  Makefile  README.md  ROADMAP.md  claude_please_read_me.txt  com.mikeybee.nexus3.plist  launch_api.sh  manage_service.sh  pyproject.toml  setup.sh  test_output_fix.py
docs/: DUAL_SERVICE.md  MODULE_SYSTEM.md
mcp_server/: nexus-mcp-debug.sh  nexus-mcp.sh  package-lock.json  package.json
mcp_server/src/: index.ts
modules/executors/command_executor/: executor.py  manifest.yaml  module.py
modules/executors/filesystem_executor/: manifest.yaml
src/nexus/: __init__.py  __main__.py  app.py  config.py  models.py
src/nexus/modules/: __init__.py  base.py  loader.py
src/nexus/services/: cortex_client.py  execution_queue.py  task_manager.py
